cargo-features = ["edition"]

[package]
name = "rsrpc"
version = "0.1.0"
authors = ["champii <contact@champii.io>"]
edition = "2018"

[dependencies]
serde="1.0"
serde_derive="1.0"
serde_bytes="0.10.4"
bincode="1.0.1"
byteorder="0.5.3"
sha2="0.7.1"
hex="0.3.2"
tokio="0.2.5"
futures = "0.3.1"
pin-utils = "0.1.0-alpha.1"
lazy_static="1.1.0"
log="0.4.4"
